--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ cmake-build-*/
 # IntelliJ
 out/
 lesson1-servlet-api/target
+lesson2-spring-basics/target
+lesson3-spring-mvc/target
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
