--- a/lesson4-spring-boot/src/main/resources/application.properties
+++ b/lesson4-spring-boot/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=8090
 logging.level.ru.karaban.controller=info
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.99.100}:3306/lesson5
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
