Домашняя работа 7. Часть 1(Без звёздочки).

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>lesson3-spring-mvc</module>
         <module>lesson4-spring-boot</module>
         <module>lesson5-hibernate</module>
+        <module>lesson7-spring-boot-hibernate</module>
     </modules>
 
     <dependencies>
