--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
     "bootstrap": "^5.2.1",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "@fortawesome/fontawesome-free": "^5.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
